--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
+/* Background & Animation */
 .gradient-background {
-  background: linear-gradient(300deg, black, rgb(181, 0, 181), black);
+  background: linear-gradient(300deg, black, rgb(0, 181, 106), black);
   background-size: 180% 180%;
   animation: gradient-animation 18s ease infinite;
 }
@@ -16,22 +17,16 @@
   }
 }
 
-.icon-square {
-  width: 3rem;
-  height: 3rem;
-  border-radius: 0.75rem;
-}
-
-.profile-img {
-  height: 100px;
-  border-radius: 50%;
-}
-
-.font {
+/* Font Styles */
+.font, .fontMiddle {
   font-family: "Lora", serif;
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
+}
+
+.fontMiddle {
+  color: rgb(250, 255, 205);
 }
 
 p {
@@ -44,19 +39,14 @@ p {
 .white {
   color: white;
   text-shadow: 10px;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 3px;
 }
 
-#background {
-  background-color: #ececec;
-}
-
-.flex-container {
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 10px;
-  flex-direction: column;
-  text-align: center;
+.sub {
+  color: rgb(250, 255, 205);
+  text-shadow: 30px;
 }
 
 h2 {
@@ -64,52 +54,19 @@ h2 {
   color: #1c0037;
 }
 
-.list {
-  list-style-position: inside;
-  color:  #1c0037;
-  }
-
-.image {
-  border: thick double #5b00b5; 
-  border-radius: 50%;
-  height:200px;
+/* Background Color */
+#background {
+  background-color: #ececec;
 }
 
-li::marker {
-  color:  #b5005b;
-}
-
-
-.container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap:5px;
-
-}
-
-.child {
-  justify-content: center;
-  align-items: center;
-}
-
-
-.image2 {
-  width: 100%;
-  max-height: 200px;
-  padding: 0;
-  border: thick double #5b00b5;
-  margin-left: 25px;
-}
-
-.image3 {
-  border: thick double #5b00b5; 
-  border-radius: 50%;
-  height:200px;
-}
-
-hr {
-  border: thick double #5b00b5;
+/* Flex Layouts */
+.flex-container {
+  display: flex;             
+  justify-content: center;  
+  align-items: flex-start;   
+  gap: 20px;                 
+  flex-wrap: wrap;           
+  margin-top: 0px;       
 }
 
 .flex2 {
@@ -118,3 +75,91 @@ hr {
   align-content: center;
 }
 
+/* Image & Container Styling */
+.image-container {
+  display: flex;
+  flex-direction: row;    
+  align-items: center;       
+  gap: 5px;                 
+}
+
+.image, .imageCat {
+  border: thick double #140028;
+  border-radius: 30%;
+  height: 275px;
+}
+
+.image2 {
+  width: 100%;
+  max-height: 200px;
+  padding: 0;
+  border: thick double #140028;
+  margin-left: 25px;
+}
+
+/* Container and Child Layout */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 5px;
+}
+
+.child {
+  justify-content: center;
+  align-items: center;
+}
+
+/* Skill List */
+.skill-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: 1;
+  max-width: 600px;
+  gap: 15px;
+}
+
+.skill-list {
+  padding-left: 20px;
+  margin: 0;
+}
+
+.skill-list li {
+  line-height: 1.5;
+  margin-bottom: 8px;
+  text-align: left;
+}
+
+.skill-list li::marker {
+  color: #00b521;
+}
+
+.list {
+  list-style-position: inside;
+  color: rgb(250, 255, 205);
+}
+
+/* Miscellaneous */
+.icon-square {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 0.75rem;
+}
+
+.profile-img {
+  height: 100px;
+  border-radius: 50%;
+}
+
+hr {
+  border: thick double #140028;
+}
+
+.inline {
+  display: inline;
+}
+
+.border {
+  box-shadow: inset 0 0 0 15px #140028;
+}
